First draft of interpolators

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -9,7 +9,8 @@ set(
   expose-robot-handler.cpp
   expose-problem.cpp
   expose-mpc.cpp
-  expose-lowlevel.cpp
+  expose-qp.cpp
+  expose-interpolate.cpp
   expose-centroidal.cpp
   expose-fulldynamics.cpp
   expose-kinodynamics.cpp
