--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>boost</depend>
   <depend>pinocchio</depend>
   <depend>proxsuite-nlp</depend>
+  <depend>proxsuite</depend>
   <depend>aligator</depend>
   <depend>std_msgs</depend>
 
