--- a/pixi.toml
+++ b/pixi.toml
@@ -20,6 +20,7 @@ libboost-python-devel = ">=1.80.0"
 python = "3.11"
 eigenpy = ">=3.10.1"
 aligator = ">=0.13"
+proxsuite = ">=0.7.2"
 benchmark = ">=1.8.0"
 pytest = ">=8.3.0"
 matplotlib = ">=3.9"
