--- a/.gersemirc
+++ b/.gersemirc
@@ -1,4 +1,4 @@
-definitions: [./CMakeLists.txt, ./benchmark, ./bindings, ./tests]
+definitions: [./CMakeLists.txt, ./cmake, ./benchmark, ./bindings, ./tests]
 line_length: 80
 indent: 2
 warn_about_unknown_commands: false
