--- a/devel-git-deps.yaml
+++ b/devel-git-deps.yaml
@@ -2,7 +2,7 @@ repositories:
   aligator:
     type: git
     url: git@github.com:edantec/aligator.git
-    version: devel
+    version: temporary_fix
   eigenpy:
     type: git
     url: git@github.com:stack-of-tasks/eigenpy.git
