--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <depend>pinocchio</depend>
   <depend>proxsuite</depend>
   <depend>aligator</depend>
+  <depend>tsid</depend>
   <depend>std_msgs</depend>
 
   <buildtool_depend>cmake</buildtool_depend>
