Expose inverse dynamics in bindings

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -13,6 +13,7 @@ set(
   expose-centroidal.cpp
   expose-fulldynamics.cpp
   expose-kinodynamics.cpp
+  expose-inverse-dynamics.cpp
   expose-friction-compensation.cpp
 )
 
