remove easy initilization of ID Settings and make centroidal test compile

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,7 @@ set(
   robot_handler
   problem
   inverse-dynamics/kinodynamics
+  inverse-dynamics/centroidal
   #mpc
   friction
   interpolator
