--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,9 @@ repos:
     hooks:
       - id: gersemi
         args: ["--print-config=verbose"]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.12.1
+    hooks:
+      - id: ruff-check # Run the linter.
+        args: [ --fix ]
+      - id: ruff-format # Run the formatter.
