Example robot data as optionnal dependency only for test and benchmark

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(benchmark REQUIRED)
+find_package(example-robot-data 4.0.9 REQUIRED)
 
 # Add a benchmark.
 function(create_bench exfile)
