First initialization of arm mpc

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -9,10 +9,12 @@ set(
   expose-robot-handler.cpp
   expose-problem.cpp
   expose-mpc.cpp
+  expose-arm-mpc.cpp
   expose-interpolate.cpp
   expose-centroidal.cpp
   expose-fulldynamics.cpp
   expose-kinodynamics.cpp
+  expose-arm-dynamics.cpp
   expose-inverse-dynamics.cpp
   expose-friction-compensation.cpp
 )
