--- a/pixi.toml
+++ b/pixi.toml
@@ -19,12 +19,13 @@ pkg-config = ">=0.29.2"
 libboost-python-devel = ">=1.80.0"
 python = "3.11"
 eigenpy = ">=3.10.1"
-aligator = ">=0.15"
+aligator = ">=0.16"
 proxsuite = ">=0.7.2"
 benchmark = ">=1.8.0"
 pytest = ">=8.3.0"
 matplotlib = ">=3.9"
 tsid = ">=1.9.0,<2"
+pybullet = ">=3.25,<4"
 
 [activation]
 scripts = ["build_scripts/pixi/activation.sh"]
