--- a/pixi.toml
+++ b/pixi.toml
@@ -17,7 +17,7 @@ pkg-config = ">=0.29.2"
 
 [dependencies]
 libboost-python-devel = ">=1.80.0"
-python = "3.11"
+python = "*"
 eigenpy = ">=3.10.1"
 aligator = ">=0.16"
 proxsuite = ">=0.7.2"
@@ -58,5 +58,4 @@ dependencies = { pre-commit = ">=3.6.2" }
 tasks = { lint = { cmd = "pre-commit run --all" } }
 
 [environments]
-default = { features = ["py311"] }
 lint = { features = ["lint"]}
